agrande las fotos del carrusel

--- a/css/style.css
+++ b/css/style.css
@@ -25,6 +25,9 @@ header nav#noIndex {
   div#contenedorCardsnovedades {
     
   }
+  img#imgCarrusel {
+    height: 20rem;
+  }
 }
 
 /*Mobil pequeño*/
