--- a/scss/global/_base.scss
+++ b/scss/global/_base.scss
@@ -1,8 +1,16 @@
 html {
   body {
     background-color: #FFFFFF;
-    background-image: linear-gradient(105deg, #000000 0%, #010008 50%, #00043a 150%);  
+    background-image: linear-gradient(105deg, #000000 30%, #0b0535 90%, #171f91 120%);  
     overflow-x: hidden ;
 }
 }
 
+
+
+
+
+
+
+    /* background-color: #FFFFFF;
+    background-image: linear-gradient(105deg, #000000 0%, #010008 50%, #00043a 150%);  */
