--- a/scss/global/_footer.scss
+++ b/scss/global/_footer.scss
@@ -1,13 +1,17 @@
 footer {
   &#footer {
-    display: flex;
-    align-content: center;
-    justify-content: center;
-
-    p {
-      &#textoFooter {
-        color: $color-texto
+    svg {
+      color: $color-secundario;
+      :hover {
+        cursor: pointer; 
+        color: rgb(146, 146, 146);
       }
+    }
+    div#contenedorIconos {
+      display: flex;
+      align-content: center;
+      justify-content: center;
+      gap: 1rem;
     }
   }
 }
